...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />


    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="Add"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/records"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"

        android:text="Records"
        android:textStyle="bold"
...
