<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RecordsActivity"
    android:layout_margin="10dp"
    android:id="@+id/records_activity">
    <TextView
        android:id="@+id/no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Records"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/white"
        android:dividerHeight="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>