...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:id="@+id/splash">

    <ImageView
        android:id="@+id/GfG_full_logo"
        android:layout_width="532dp"
        android:layout_height="882dp"
        android:contentDescription="@string/todo"
...
